--- a/composer.json
+++ b/composer.json
@@ -1,3 +1,8 @@
 {
-
+"require": {
+    "php": ">=5.6",
+    "slim/slim": "^3.5.0",
+    "monolog/monolog": "^1.21.0",
+    "linecorp/line-bot-sdk": "1.5.0"
+  }
 }
